envoy/ingress.yaml
admin:
  access_log_path: /dev/null
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901

dynamic_resources:
  ads_config:
    api_type: GRPC
    grpc_services:
      envoy_grpc:
        cluster_name: xds_cluster
  lds_config: { ads: {} }
  cds_config: { ads: {} }

static_resources:
  listeners:
    - name: tcp_listener
      address:
        socket_address:
          protocol: TCP
          address: 0.0.0.0
          port_value: 8888
      filter_chains:
        - filters:
            - name: envoy.tcp_proxy # envoy.filters.network.tcp_proxy
              # typed_config:
              #   "@type": type.googleapis.com/envoy.config.filter.network.tcp_proxy.v2.TcpProxy
              config:
                stat_prefix: ingress_tcp_xds_listener
                cluster: "whoami-tcp:9999"
    - name: http_listener
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager # envoy.filters.network.http_connection_manager
              # typed_config:
              #   "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
              config:
                codec_type: auto
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  validate_clusters: false
                  virtual_hosts:
                    - name: whoami-http-one
                      domains:
                        - "whoami.one.local"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: "whoami-http-one:10001"
                            timeout: 3s
                    - name: whoami-http-two
                      domains:
                        - "whoami.two.local"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: "whoami-http-two:10002"
                            timeout: 3s
                    # - name: whoami-http-demo
                    #   domains:
                    #     - "whoami.demo.local"
                    #   routes:
                    #     - match:
                    #         prefix: "/"
                    #       route:
                    #         cluster: "whoami-http-demo:10003"
                    #         timeout: 3s
                http_filters:
                  - name: envoy.router
                    #typed_config: {}
                    config: {}

  clusters:
    - name: xds_cluster
      connect_timeout: 0.25s
      type: STATIC
      lb_policy: ROUND_ROBIN
      http2_protocol_options: {}
      upstream_connection_options:
        # configure a TCP keep-alive to detect and reconnect to the admin
        # server in the event of a TCP socket half open connection
        tcp_keepalive: {}
      load_assignment:
        cluster_name: xds_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 7776
